eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordent-marketplace-api-deployment
  labels:
    app: ordent-marketplace-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordent-marketplace-api
  template:
    metadata:
      labels:
        app: ordent-marketplace-api
    spec:
      containers:
      - name: ordent-marketplace-api
        image: 095420225348.dkr.ecr.eu-west-1.amazonaws.com/ordent-marketplace:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
