eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordent-marketplace-api-service
spec:
  selector:
    app: ordent-marketplace-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
